// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createFontStyles tests creates the correct font styles for ar 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "18px",
    "fontWeight": 400,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "16px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "68px",
    "fontWeight": 600,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 600,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "20px",
    "fontWeight": 600,
  },
  "xLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "24px",
    "fontWeight": 600,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 600,
  },
  "xxLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI Web (Arabic)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "32px",
    "fontWeight": 600,
  },
}
`;

exports[`createFontStyles tests creates the correct font styles for en 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "18px",
    "fontWeight": 400,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "16px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "68px",
    "fontWeight": 600,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 600,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "20px",
    "fontWeight": 600,
  },
  "xLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "24px",
    "fontWeight": 600,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 600,
  },
  "xxLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "32px",
    "fontWeight": 600,
  },
}
`;

exports[`createFontStyles tests creates the correct font styles for ja 1`] = `
Object {
  "large": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "18px",
    "fontWeight": 400,
  },
  "medium": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "14px",
    "fontWeight": 400,
  },
  "mediumPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "16px",
    "fontWeight": 400,
  },
  "mega": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "68px",
    "fontWeight": 600,
  },
  "small": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "smallPlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "12px",
    "fontWeight": 400,
  },
  "superLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "42px",
    "fontWeight": 600,
  },
  "tiny": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "20px",
    "fontWeight": 600,
  },
  "xLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "24px",
    "fontWeight": 600,
  },
  "xSmall": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "10px",
    "fontWeight": 400,
  },
  "xxLarge": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "28px",
    "fontWeight": 600,
  },
  "xxLargePlus": Object {
    "MozOsxFontSmoothing": "grayscale",
    "WebkitFontSmoothing": "antialiased",
    "fontFamily": "'Yu Gothic UI', 'Meiryo UI', Meiryo, 'MS Pgothic', Osaka, 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif",
    "fontSize": "32px",
    "fontWeight": 600,
  },
}
`;
